# llm-memory

./: README.md  pyproject.toml
Notebooks/: llm_memory (old).ipynb  sleepy_lm.ipynb
src/sleepylm/: __init__.py  add.py  chat.py  cli.py  snooze.py
src/sleepylm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
